fixed very long passwords overflowing
blame twitter.com/jFields99 for discovering this with wordCount=500

--- a/main.css
+++ b/main.css
@@ -18,4 +18,5 @@ h2, h3 {
 #output {
     border: 1px #444 solid;
     padding: 8px;
+    word-wrap: break-word;
 }
